refactor: AuthorController